--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.14.2",
@@ -12,7 +13,6 @@
     "node-sass": "^4.11.0",
     "pg": "^7.8.0",
     "react": "^16.7.0",
-    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
