--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bookshelf": "^0.14.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "knex": "^0.16.3",
     "node-sass": "^4.11.0",
     "pg": "^7.8.0",
